buildscript {
    dependencies {
        classpath 'org.openapitools:openapi-generator-gradle-plugin:6.6.0'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

apply plugin: 'org.openapi.generator'


group = 'com.keith'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDir("$buildDir/generated/src/main/java")
        }
    }
}

configurations {
    mockitoAgent
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation 'com.google.api-client:google-api-client:2.7.0'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation("io.swagger.core.v3:swagger-annotations-jakarta:2.2.52")
    implementation("org.openapitools:jackson-databind-nullable:0.2.7")
    implementation 'org.mapstruct:mapstruct:1.6.3'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation("org.assertj:assertj-core:3.27.7")
    testImplementation(libs.mockito)

    // JWT Token Management
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // AWS S3 SDK
    implementation 'software.amazon.awssdk:s3:2.25.0'
    implementation 'software.amazon.awssdk:auth:2.25.0'

    // Utilities
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'commons-codec:commons-codec:1.15'
    mockitoAgent(libs.mockito) {
        transitive = false
    }
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
}

openApiGenerate {
    generatorName.set("spring")
    inputSpec.set("$rootDir/src/main/resources/openapi/openapi.yaml")
    outputDir.set(getLayout().getBuildDirectory().dir("generated").get().getAsFile().getPath())
    apiPackage.set("com.keith.battlereadyshelf.generated.api")
    invokerPackage.set("com.keith.battlereadyshelf")
    modelPackage.set("com.keith.battlereadyshelf.generated.model")
    configOptions.set([
            dateLibrary: "java8",
            "interfaceOnly": "true",
            "useSpringBoot4": "true",
            "useJakartaEe" : "true",
            "generateBuilders": "true",
            "generateConstructorWithAllArgs": "true",
            "defaultToEmptyContainer": "true",
            "useTags": "true"


    ])
}

tasks {
    test {
        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

// Ensure OpenAPI generated sources are produced before compilation
tasks.named('compileJava') {
    dependsOn tasks.named('openApiGenerate')
}
tasks.named('processResources') {
    dependsOn tasks.named('openApiGenerate')
}
// Make the build task also depend on the generator to be safe
tasks.named('build') {
    dependsOn tasks.named('openApiGenerate')
}
